--- a/package.json
+++ b/package.json
@@ -58,5 +58,6 @@
     "postcss-preset-mantine": "^1.7.0",
     "postcss-simple-vars": "^7.0.1",
     "vite": "^4.4.5"
-  }
+  },
+  "proxy":"http://localhost/upload.php"
 }
